# boca

./: .gitignore  .goreleaser.yaml  Cargo.toml  Gemfile  README.md  cspell.json
.github/workflows/: lint.yaml  release.yaml  test.yaml
features/: command.feature  escape.feature  exit_status.feature  file.feature  stdio.feature
src/: main.rs  parameter.rs  world.rs
tests/: command.feature
tests/features/: command.feature
