[package]
name = "aruba"
description = "Aruba implementation in Rust"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/raviqqe/aruba-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true

[dependencies]
cucumber = "0.21.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
pretty_assertions = "1"
