[package]
name = "boca"
description = "Aruba implementation in Rust"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/raviqqe/aruba-rs"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true

[dependencies]
cucumber = "0.21.1"
derive_more = { version = "2.0.1", features = ["full"] }
memchr = "2.7.5"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }

[dev-dependencies]
pretty_assertions = "1"
